Update Network+ progress to 80% and add photography coming soon page
- Updated Network+ certification progress from 61% to 80% in credentials section
- Connected photo.loydjohnson.com link to local coming soon page
- Added PhotoComingSoon component and photo.html entry point
- Updated progress bar and percentage text to reflect current study status

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:photo": "vite --port 5174",
     "build": "vite build",
+    "build:photo": "vite build --mode photo",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "preview:photo": "vite preview --port 4175"
   },
   "dependencies": {
     "lucide-react": "^0.548.0",
